Criando o container principal da tela, com descrição do obbjetivo e 2 botões estilizados via bootstrap que redirecionam para as outras telas do meu projeto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
         <h1>Plataforma de Conexão Voluntária</h1>
         <p>Conectando ONGs e Voluntários por um mundo melhor</p>
     </header>
+    
+    <main class="container text-center mt-5">
+        <h2>Bem-vindo!</h2>
+        <p>Nosso objetivo é facilitar a conexão entre instituições que precisam de ajuda e pessoas dispostas a contribuir.</p>
+        <div class="mt-4">
+            <a href="cadastro.html" class="btn btn-success m-2">Cadastrar Necessidade</a>
+            <a href="necessidades.html" class="btn btn-outline-primary m-2">Ver Necessidades</a>
+        </div>
+    </main>
 
+    <footer class="text-center p-3 mt-5 bg-light">
+        <p>&copy; 2025 Plataforma de Conexão Voluntária</p>
+    </footer>
    
 </body>
 </html>
