Finalizando o form para cadastro das informações, botão para cadastro das necessidades, inserindo footer na página e linkando os arquivos de script em JS

--- a/cadastro.html
+++ b/cadastro.html
@@ -32,6 +32,57 @@
                 </select>
             </div>
 
+            <div class="mb-3">
+                <label for="titulo" class="form-label">Título da Necessidade*</label>
+                <input type="text" class="form-control" id="titulo" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="descricao" class="form-label">Descrição Detalhada*</label>
+                <textarea class="form-control" id="descricao" rows="4" required></textarea>
+            </div>
+
+            <div class="mb-3">
+                <label for="cep" class="form-label">CEP*</label>
+                <input type="text" class="form-control" id="cep" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="rua" class="form-label">Rua*</label>
+                <input type="text" class="form-control" id="rua" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="bairro" class="form-label">Bairro*</label>
+                <input type="text" class="form-control" id="bairro" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="cidade" class="form-label">Cidade*</label>
+                <input type="text" class="form-control" id="cidade" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="estado" class="form-label">Estado*</label>
+                <input type="text" class="form-control" id="estado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="contato" class="form-label">Contato (E-mail ou Telefone)*</label>
+                <input type="text" class="form-control" id="contato" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </form>
+    </main>
+
+    <footer class="text-center p-3 mt-5 bg-light">
+        <p>&copy; 2025 Plataforma de Conexão Voluntária</p>
+    </footer>
+
+    <script src="js/viaCEP.js"></script>
+    <script src="js/cadastro.js"></script>
+
             
 </body>
 </html>
