--- a/cadastro.html
+++ b/cadastro.html
@@ -73,6 +73,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <a href="index.html" class="btn btn-secondary ms-2" type="button">Voltar</a>
         </form>
     </main>
 
