--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </main>
 
-    <footer class="text-center p-3 mt-5 bg-light">
+    <footer>
         <p>&copy; 2025 Plataforma de Conexão Voluntária</p>
     </footer>
    
